--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
+    "react-pdf": "^7.6.0",
     "react-router-dom": "^6.14.1",
     "react-scripts": "5.0.1",
     "swiper": "^10.2.0",
